--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "test-skip",
+  "name": "@cypress/skip-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple commands to skip a test based on platform, browser or an url",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com> (https://glebbahmutov.com/)",
-  "license": "ISC",
+  "license": "MIT",
+  "private": false,
   "devDependencies": {
     "cypress": "3.6.0"
   }
