feat: split functions from support file
BREAKING CHANGE: if you want to use custom commands, you need
to explicitly require the support file like this.

```js
require('@cypress/skip-test/support')
```

This way you can import individual functions without adding them
as custom commands.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/cypress-io/cypress-skip-test#readme",
   "files": [
     "index.js",
-    "index.d.ts"
+    "index.d.ts",
+    "support.js"
   ]
 }
