--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "cypress run",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "format": "prettier --write '*.js' 'cypress/**/*.js'"
   },
   "keywords": [
     "cypress",
@@ -17,6 +18,7 @@
   "private": false,
   "devDependencies": {
     "cypress": "3.6.1",
+    "prettier": "1.19.1",
     "semantic-release": "15.13.30"
   },
   "repository": {
