start testing the full system

--- a/circle.yml
+++ b/circle.yml
@@ -7,4 +7,6 @@ workflows:
       - cypress/run:
           no-workspace: true
           post-steps:
+            # execute full tests
+            - run: npm run e2e
             - run: npm run semantic-release
