--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "cypress run",
     "semantic-release": "semantic-release",
     "format": "prettier --write '*.js' 'cypress/**/*.js'",
-    "e2e": "mocha --timeout 30000 test"
+    "e2e": "mocha --timeout 30000 test",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "keywords": [
     "cypress",
