--- a/circle.yml
+++ b/circle.yml
@@ -5,12 +5,38 @@ workflows:
   build:
     jobs:
       - cypress/run:
+          name: Cypress v4 tests
           executor: cypress/browsers-chrome78-ff70
           no-workspace: true
+          cache-key: 'cache-cypress-v4'
+          post-install:
+            - run: npm install cypress@4
+            - run: npx cypress info
+          post-steps:
+            # execute full tests
+            - run: npm run e2e
+
+      - cypress/run:
+          name: Cypress tests
+          executor: cypress/browsers-chrome78-ff70
           post-install:
             # print info about OS and found browsers
             - run: npx cypress info
           post-steps:
             # execute full tests
             - run: npm run e2e
-            - run: npm run semantic-release
+
+      # this job attaches the workspace left by the install job
+      # so it is ready to run Cypress tests
+      # only we will run semantic release script instead
+      - cypress/run:
+          name: NPM release
+          # we need newer Node for semantic release
+          executor: cypress/base-12-6-0
+          requires:
+            - Cypress v4 tests
+            - Cypress tests
+          install-command: echo 'Nothing to install in this job'
+          no-workspace: true
+          # instead of "cypress run" do NPM release 😁
+          command: npm run semantic-release
